# afterburner-ai

./: Cargo.toml  LICENSE  build.sh
.github/workflows/: rust.yml
afterburner/: Cargo.toml  rust-toolchain.toml
afterburner/.cargo/: config.toml
afterburner/afterburner-core/: Cargo.toml
afterburner/afterburner-core/src/: backend.rs  convert.rs  error.rs  lib.rs  prelude.rs  shape.rs  tensor.rs
afterburner/afterburner-cpu/: Cargo.toml
afterburner/afterburner-cpu/src/: batch_norm.rs  channel_normalize.rs  conv2d.rs  lib.rs  prelude.rs
afterburner/afterburner-ops/: Cargo.toml
afterburner/afterburner-ops/src/: lib.rs  prelude.rs
afterburner/afterburner-ops/src/activation/: mod.rs
afterburner/afterburner-ops/src/batch_norm/: mod.rs
afterburner/afterburner-ops/src/conv/: conv2d.rs  mod.rs
afterburner/afterburner-ops/src/elementwise/: mod.rs
afterburner/afterburner-ops/src/normalize/: mod.rs
afterburner/afterburner-ops/src/reduction/: max.rs  min.rs  mod.rs
afterburner/afterburner-ops/src/reshape/: mod.rs
afterburner/afterburner-ops/src/transforms/: channel_normalize.rs  mod.rs  range_normalize.rs
afterburner/afterburner-ops/src/vector/: normalize.rs
afterburner/afterburner-rustgpu/: Cargo.toml  build.rs
afterburner/afterburner-rustgpu-shared/: Cargo.toml
afterburner/afterburner-rustgpu-shared/src/: activation.rs  batch_norm.rs  channel_normalize.rs  conv2d.rs  elementwise.rs  lib.rs  max.rs  min.rs  normalize.rs  range_normalize.rs  reshape.rs
afterburner/afterburner-rustgpu/src/: batch_norm.rs  channel_normalize.rs  conv2d.rs  convert.rs  elementwise.rs  leaky_relu.rs  lib.rs  max.rs  min.rs  nn.rs  normalize.rs  prelude.rs  range_normalize.rs  reshape.rs  sigmoid.rs
crates/afterburner-core/: Cargo.toml
crates/afterburner-core/src/: backend.rs  conv2d.rs  error.rs  lib.rs  nn.rs  prelude.rs  shape.rs  tensor.rs
crates/afterburner-core/src/cpu/: mod.rs
crates/afterburner-cpu/: Cargo.toml
crates/afterburner-cpu/src/: lib.rs  nn.rs
crates/afterburner-rustgpu/: Cargo.toml  build.rs
crates/afterburner-rustgpu-shaders/: Cargo.toml
crates/afterburner-rustgpu/src/: lib.rs  prelude.rs
crates/shaders/: Cargo.toml
crates/shaders/builder/: Cargo.toml
crates/shaders/shaders/: Cargo.toml
examples/: Cargo.toml  README.md
examples/examples/: edge-detection.rs  normalize.rs  test_operations.rs  yolov3.rs
examples/yolov3/: Cargo.toml
shaders/: Cargo.toml  rust-toolchain.toml
shaders/afterburner-shaders/: Cargo.toml
shaders/afterburner-shaders/src/: conv2d.rs  convert.rs  lib.rs
shaders/builder/: Cargo.toml
shaders/builder/src/: main.rs
shaders/shaders/: Cargo.toml
shaders/shaders/src/: lib.rs
