[workspace]
resolver = "2"
members = [
    "crates/afterburner-core",
    "crates/afterburner-cpu",
    "crates/afterburner-rustgpu",
    "crates/afterburner-rustgpu-shaders",
]

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[workspace.package]
name = "afterburner"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tracing = "0.1"
tracing-test = "0.2"
thiserror = "2"
spirv-builder = "0.9"
spirv-std = "0.9"
wgpu = "23"
smol = "2"
bytemuck = "1"
