[workspace]
resolver = "2"
members = ["crates/afterburner-core", "crates/afterburner-rustgpu"]
exclude = ["crates/shaders", "crates/shaders/shaders", "crates/shaders/builder"]

[workspace.package]
name = "afterburner"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tracing = "0.1"
tracing-test = "0.2"
thiserror = "2"
wgpu = "0.19"
smol = "2"
bytemuck = "1"
lazy_static = "1"
