[workspace]
resolver = "2"
members = [
    "afterburner-core",
    "afterburner-cpu",
    "afterburner-ops",
    "afterburner-rustgpu",
    "afterburner-rustgpu-shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tracing = "0.1"
tracing-test = "0.2"
thiserror = "2"
wgpu = "24"
smol = "2"
bytemuck = "1"
lazy_static = "1"
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", branch = "main" }
