[workspace]
resolver = "2"
members = ["afterburner-shaders", "builder"]

[workspace.package]
name = "afterburner-shaders"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", branch = "main" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", branch = "main" }
tracing = "0.1"
tracing-test = "0.2"
