[package]
name = "afterburner-rustgpu"
version.workspace = true
edition.workspace = true

[dependencies]
afterburner-core = { path = "../afterburner-core" }
afterburner-rustgpu-shared = { path = "../afterburner-rustgpu-shared" }
wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
smol = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
