[package]
name = "afterburner-rustgpu"
version.workspace = true
edition.workspace = true

[dependencies]
afterburner-core = { path = "../afterburner-core" }
wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
smol = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
