[package]
name = "afterburner-shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { workspace = true }
afterburner-rustgpu-shared = { path = "../../afterburner/afterburner-rustgpu-shared" }

[dev-dependencies]
tracing = { workspace = true }
tracing-test = { workspace = true }
