[package]
name = "afterburner-shaders"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { workspace = true }
afterburner-rustgpu-shared = { path = "../../afterburner/afterburner-rustgpu-shared" }

[dev-dependencies]
tracing = { workspace = true }
tracing-test = { workspace = true }
